<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="helloWorld">Hello World!</string>
    <string name="buttonText">I am a button!</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="pswd">password</string>
    <string name="wdtd">What does this do?</string>s
    <string name="rad_but">RadioButton</string>
    <string name="chk_box">CheckBox</string>
    <string name="login_button_text">Login</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Question</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="switch_on">Switch is on</string>
    <string name="switch_off">Switch is off</string>
    <string name="start_chat">Start Chat</string>
    <string name="new_text">New Text</string>
    <string name="new_chat">New Message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="menu_one">One</string>
    <string name="menu_two">Two</string>
    <string name="menu_three">Three</string>
    <string name="toolbar_button">Test Toolbar</string>
    <string name="toolbar_settings">Settings</string>
    <string name="pick_color">Do you want to go back?</string>
    <string name="msg_to_world">What is your message to the world?</string>
</resources>