<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="One"
        android:icon="@drawable/ic_french_fries"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/menu_two"
        android:icon="@drawable/ic_cinnamon_roll"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="@string/menu_three"
        android:icon="@drawable/ic_pizza"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_four"
        android:title="@string/toolbar_settings"
        app:showAsAction="never"
        />

</menu>