<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItems">

    <RadioButton
        android:layout_gravity="fill"
        android:layout_columnWeight="1"

        android:text="@string/rad_but"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/chk_box" />
    <Switch
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:text="@string/wdtd"
        android:id="@+id/switch_button"/>

    <ImageButton
        android:id="@+id/img_button"
        android:layout_columnWeight="1"

        android:layout_gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />


</GridLayout>